<?xml version="1.0" encoding="utf-8"?>
<!-- Cabecera común (se reutiliza con <include>): logo vectorial y nombre de la app -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/alto_cabecera"
    android:background="@color/color_primario"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingHorizontal="@dimen/margen_pantalla">

    <ImageView
        android:layout_width="@dimen/tam_logo"
        android:layout_height="@dimen/tam_logo"
        android:contentDescription="@string/desc_logo"
        android:src="@drawable/ic_balon"
        app:tint="@color/color_secundario" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/espacio_grande"
        android:orientation="vertical">

        <TextView
            style="@style/Estilo.Titulo.Cabecera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

        <TextView
            style="@style/Estilo.Etiqueta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lema"
            android:textColor="@color/color_secundario" />
    </LinearLayout>
</LinearLayout>
